--- a/style.css
+++ b/style.css
@@ -71,15 +71,16 @@ header {
 .home-info{
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
   font-weight: 700;
-
 }
 
 .home-info h1{
   font-size: 5rem;
+  margin: -1rem auto -1rem auto
 }
 
 .home-info h4{
   font-size: 2rem;
+  color: var(--cor-principal);
 }
 
 .home-info span{
