--- a/style.css
+++ b/style.css
@@ -15,7 +15,6 @@
   text-decoration: none;
   outline: none;
   border: none;
-  text-transform: capitalize;
   transition: 0.2s linear;
 }
 
@@ -136,7 +135,7 @@ body {
 
 .container-sobre {
   background-color: var(--cor-principal);
-  margin-top: 16rem;
+  margin-top: 23rem;
   position: relative;
 }
 .container-sobre section {
@@ -155,11 +154,11 @@ body {
 
 .container-sobre .conteudo-container figure {
   border: 10px solid #fff;
-  margin: auto auto auto 5rem;
+  margin: auto auto auto 10rem;
 }
 
 .container-sobre .conteudo-container img {
-  height: 35rem;
+  height: 45rem;
   position: relative;
   top: -1.5rem;
   left: -1.5rem;
@@ -169,7 +168,7 @@ body {
   width: 700px;
   display: flex;
   margin-top: -5rem;
-  margin-right: 10rem;
+  margin-right: 18rem;
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -212,16 +211,133 @@ body {
   /* PROJETO */
 
   .container-projeto{
-    padding-top: 5rem;
+    padding-top: 8rem;
     background-color: var(--cor-principal);
     display: flex;
     align-items: center;
     justify-content: center;
+    
   }
 
   .projeto-conteudo{
-    background-color: var(--cor-quartenario);
-    width: 79rem;
-    height: 500px;
-    border-radius: 30px;
+    display: grid;
+    place-items: center;
+    margin-inline: 1.5rem;
+    padding-block: 5rem;
   }
+
+  .card-container{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 1.5rem;
+    row-gap: 3.5rem;
+  }
+
+  .card-article{
+    position: relative;
+    overflow: hidden;
+  }
+
+  .card-img{
+    display: block;
+    width: 400px;
+    border-radius: 1.5rem;
+    max-width: 100%;
+    height: auto;
+  }
+
+  .card-data{
+    width: 300px;
+    background-color: var(--cor-secundaria);
+    padding: 1.5rem 2rem;
+    box-shadow: 0 8px 24px hsla(0, 0%, 0%, .15);
+    border-radius: 1rem;
+    position: absolute;
+    bottom: -9rem;
+    left: 0;
+    right: 0;
+    margin-inline: auto;
+    opacity: 0;
+    transition: opacity 1s 1s;
+  }
+
+  .card-titulo{
+    font-size: 1.5rem;
+    font-weight: 500;
+    color: var(--cor-principal);
+    margin-bottom: .25rem;
+  }
+
+  .card-descricao{
+    display: block;
+    font-size: .813rem;
+    margin-bottom: .75rem;
+  }
+
+  .card-button{
+    font-weight: 500;
+    font-size: .813rem;
+    color: var(--cor-botao);
+  }
+
+  .card-button:hover{
+    text-decoration: underline;
+  }
+
+  .card-article:hover .card-data{
+    animation: show-data 1s forwards;
+    opacity: 1;
+    transition: opacity .3s;
+  }
+
+  .card-article:hover{
+    animation: remove-overflow 2s forwards;
+  }
+
+  .card-article:not(:hover){
+    animation: show-overflow 2s forwards;
+  }
+  
+  .card-article:not(:hover) .card-data{
+    animation: remove-data 1s forwards;
+  }
+
+  @keyframesy show-data{
+    50%{
+      transform: translateY(-10rem)
+    }
+    100%{
+      transform: translateY(-7rem)
+    }
+  }
+
+  @keyframes remove-overflow{
+    to {
+      overflow: initial;
+    }
+  }
+
+  @keyframes remove-data{
+    0%{
+      transform: translateY(-7rem);
+    }
+    50%{
+      transform: translateY(-10rem);
+    }
+    100%{
+      transform: translateY(.5rem);
+    }
+  }
+
+  @keyframes show-overflow{
+    0%{
+      overflow: initial;
+      pointer-events: none;
+    }
+    50%{
+      overflow: hidden;
+    }
+  }
+
+    /* SECTION CONTATO */
+
