--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
   height: 1280px;
   width: 100%;
   position: absolute;
-  top: -14rem;
+  top: -13rem;
   bottom: 0;
   left: 0;
   z-index: 0;
@@ -61,7 +61,7 @@ body {
   left: 0;
   right: 0;
   z-index: 100;
-  background-color: #FFFFFF90;
+  background-color: #ffffff90;
 }
 
 #header-container section {
@@ -135,7 +135,7 @@ body {
 
 .container-sobre {
   background-color: var(--cor-principal);
-  margin-top: 23rem;
+  margin-top: 17rem;
   position: relative;
 }
 .container-sobre section {
@@ -158,7 +158,7 @@ body {
 }
 
 .container-sobre .conteudo-container img {
-  height: 45rem;
+  height: 40rem;
   position: relative;
   top: -1.5rem;
   left: -1.5rem;
@@ -168,7 +168,7 @@ body {
   width: 700px;
   display: flex;
   margin-top: -5rem;
-  margin-right: 18rem;
+  margin-right: 1rem;
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -179,22 +179,22 @@ body {
   font-size: 20px;
   color: var(--cor-secundaria);
   text-align: justify;
-  text-transform:initial;
+  text-transform: initial;
 }
 
-.sobre-info h3{
+.sobre-info h3 {
   font-size: 40px;
   font-family: "Montserrat", sans-serif;
   font-weight: 900;
   color: var(--cor-tercearia);
 }
 
-.sobre-info .skill img{
+.sobre-info .skill img {
   height: 48px;
   margin: 1rem;
 }
 
-.sobre-info button{
+.sobre-info button {
   background-color: var(--cor-botao);
   color: var(--cor-secundaria);
   width: 30rem;
@@ -207,137 +207,187 @@ body {
   cursor: pointer;
 }
 
+/* PROJETO */
 
-  /* PROJETO */
+.container-projeto {
+  padding-top: 8rem;
+  background-color: var(--cor-principal);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
-  .container-projeto{
-    padding-top: 8rem;
-    background-color: var(--cor-principal);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    
+.projeto-conteudo {
+  display: grid;
+  place-items: center;
+  margin-inline: 1.5rem;
+  padding-block: 5rem;
+  margin-top: -3rem;
+}
+
+.card-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  column-gap: 1.5rem;
+  row-gap: 3.5rem;
+}
+
+.card-article {
+  position: relative;
+  overflow: hidden;
+}
+
+.card-img {
+  display: block;
+  width: 400px;
+  border-radius: 1.5rem;
+  max-width: 100%;
+  height: auto;
+}
+
+.card-data {
+  width: 280px;
+  background-color: var(--cor-secundaria);
+  padding: 1.5rem 2rem;
+  box-shadow: 0 8px 24px hsla(0, 0%, 0%, 0.15);
+  border-radius: 1rem;
+  position: absolute;
+  bottom: -15rem;
+  left: 0;
+  right: 0;
+  margin-inline: auto;
+  opacity: 0;
+  transition: opacity 1s 1s;
+  font-family: "Arvo", serif;
+  z-index: 97;
+}
+
+.card-titulo {
+  font-size: 1.5rem;
+  font-weight: 500;
+  color: var(--cor-principal);
+  margin-bottom: 4px;
+}
+
+.card-descricao {
+  display: block;
+  font-size: 15px;
+  margin-bottom: 12px;
+}
+
+.card-button {
+  font-weight: 500;
+  font-size: 14px;
+  color: var(--cor-botao);
+}
+
+.card-button:hover {
+  text-decoration: underline;
+}
+
+.card-article:hover .card-data {
+  animation: show-data 1s forwards;
+  opacity: 1;
+  transition: opacity 0.3s;
+}
+
+.card-article:hover {
+  animation: remove-overflow 2s forwards;
+}
+
+.card-article:not(:hover) {
+  animation: show-overflow 2s forwards;
+}
+
+.card-article:not(:hover) .card-data {
+  animation: remove-data 1s forwards;
+}
+
+@keyframes show-data {
+  50% {
+    transform: translateY(-10rem);
   }
-
-  .projeto-conteudo{
-    display: grid;
-    place-items: center;
-    margin-inline: 1.5rem;
-    padding-block: 5rem;
+  100% {
+    transform: translateY(-7rem);
   }
+}
 
-  .card-container{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    column-gap: 1.5rem;
-    row-gap: 3.5rem;
+@keyframes remove-overflow {
+  to {
+    overflow: initial;
   }
+}
 
-  .card-article{
-    position: relative;
+@keyframes remove-data {
+  0% {
+    transform: translateY(-7rem);
+  }
+  50% {
+    transform: translateY(-10rem);
+  }
+  100% {
+    transform: translateY(0.5rem);
+  }
+}
+
+@keyframes show-overflow {
+  0% {
+    overflow: initial;
+    pointer-events: none;
+  }
+  50% {
     overflow: hidden;
   }
+}
 
-  .card-img{
-    display: block;
-    width: 400px;
-    border-radius: 1.5rem;
-    max-width: 100%;
-    height: auto;
-  }
+.img-de-fundo-invertido img {
+  width: 100%;
+  position: relative;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 0;
+}
 
-  .card-data{
-    width: 300px;
-    background-color: var(--cor-secundaria);
-    padding: 1.5rem 2rem;
-    box-shadow: 0 8px 24px hsla(0, 0%, 0%, .15);
-    border-radius: 1rem;
-    position: absolute;
-    bottom: -9rem;
-    left: 0;
-    right: 0;
-    margin-inline: auto;
-    opacity: 0;
-    transition: opacity 1s 1s;
-  }
+/* SECTION CONTATO */
 
-  .card-titulo{
-    font-size: 1.5rem;
-    font-weight: 500;
-    color: var(--cor-principal);
-    margin-bottom: .25rem;
-  }
+#titulo-contato {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  color: #fff;
+  font-family: "Great Vibes", cursive;
+  font-size: 50px;
+  flex-direction: column;
+  background-color: var(--cor-quartenario);
+  width: 36rem;
+  height: 10rem;
+  border-radius: 30px;
+  position: relative;
+  z-index: 10;
+}
 
-  .card-descricao{
-    display: block;
-    font-size: .813rem;
-    margin-bottom: .75rem;
-  }
+#titulo-contato h2 {
+  color: var(--cor-tercearia);
+  font-weight: 900;
+  font-family: "Montserrat", sans-serif;
+  font-size: 70px;
+  padding-top: 2rem;
+}
 
-  .card-button{
-    font-weight: 500;
-    font-size: .813rem;
-    color: var(--cor-botao);
-  }
+#titulo-contato h3 {
+  position: relative;
+  top: -3rem;
+  color: var(--cor-secundaria);
+}
 
-  .card-button:hover{
-    text-decoration: underline;
-  }
-
-  .card-article:hover .card-data{
-    animation: show-data 1s forwards;
-    opacity: 1;
-    transition: opacity .3s;
-  }
-
-  .card-article:hover{
-    animation: remove-overflow 2s forwards;
-  }
-
-  .card-article:not(:hover){
-    animation: show-overflow 2s forwards;
-  }
-  
-  .card-article:not(:hover) .card-data{
-    animation: remove-data 1s forwards;
-  }
-
-  @keyframesy show-data{
-    50%{
-      transform: translateY(-10rem)
-    }
-    100%{
-      transform: translateY(-7rem)
-    }
-  }
-
-  @keyframes remove-overflow{
-    to {
-      overflow: initial;
-    }
-  }
-
-  @keyframes remove-data{
-    0%{
-      transform: translateY(-7rem);
-    }
-    50%{
-      transform: translateY(-10rem);
-    }
-    100%{
-      transform: translateY(.5rem);
-    }
-  }
-
-  @keyframes show-overflow{
-    0%{
-      overflow: initial;
-      pointer-events: none;
-    }
-    50%{
-      overflow: hidden;
-    }
-  }
-
-    /* SECTION CONTATO */
+.container-contato {
+  margin-top: -30rem;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  position: relative;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
 
