--- a/style.css
+++ b/style.css
@@ -352,19 +352,21 @@ body {
 /* SECTION CONTATO */
 
 #titulo-contato {
+  position: relative;
+  top: -12rem;
+  width: 28rem;
+  height: 10rem;
   display: flex;
   align-items: center;
   justify-content: center;
-  text-align: center;
-  color: #fff;
-  font-family: "Great Vibes", cursive;
-  font-size: 50px;
   flex-direction: column;
+  font-size: 50px;
+  text-align: center;
+  font-family: "Great Vibes", cursive;
+  color: #fff;
   background-color: var(--cor-quartenario);
-  width: 36rem;
-  height: 10rem;
   border-radius: 30px;
-  position: relative;
+  margin-left: 13rem;
   z-index: 10;
 }
 
@@ -384,6 +386,7 @@ body {
 
 .container-contato {
   margin-top: -30rem;
+  padding-bottom: 0;
   display: flex;
   align-items: center;
   justify-content: flex-start;
@@ -391,3 +394,131 @@ body {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
+.contato-conteudo{
+  position: relative;
+  row-gap: 0;
+}
+
+.contato-email{
+  position: relative;
+  left: -2rem;
+  width: 40rem;
+  padding: 5rem 3.5rem 2.5rem;
+  background-color: var(--cor-tercearia);
+  transition: background-color .4s;
+  border-radius: 30px;
+}
+
+.form-titulo{
+  color: var(--cor-secundaria);
+  font-size: 30px;
+  margin-bottom: 2rem;
+  /* text-align: center; */
+}
+
+.contato-form,
+.contato-grupo{
+  display: grid;
+  row-gap: 2rem;
+}
+
+.contato-form{
+  position: relative;
+}
+
+.contato-box{
+  position: relative;
+  width: 100%;
+  height: 58px;
+}
+
+.contato-input,
+.contato-button{
+  font-family: "Arvo", serif;
+  font-weight: 500;
+  font-size: 15px;
+  border-radius: 12px;
+}
+
+.contato-input{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: var(--cor-tercearia);
+  border: 3px solid var(--cor-secundaria);
+  color: var(--cor-secundaria);
+  padding: .5rem 1rem;
+  transition: border .4s, background-color .4s;
+}
+
+.contato-input::placeholder{
+  color: var(--cor-secundaria);
+  transition: opacity .4s;
+}
+
+.contato-input:focus{
+  border: 3px solid --cor-quartenario;
+}
+
+.contato-input::webkit-autofill{
+transition: background-color 6000s color 6000s;
+}
+
+.contato-label{
+  position: absolute;
+  top: -18px;
+  left: 10px;
+  color: var(--cor-secundaria);
+  background-color: var(--cor-tercearia);
+  font-size: 18px;
+  font-weight: 600;
+  padding: 8px;
+  pointer-events: none;
+  transition: top .4s, opacity .4s, background-color .4s;
+  opacity: 0;
+}
+
+.contato-form .contato-area{
+  height: 15rem;
+}
+
+.contato-area textarea{
+  resize: none;
+  padding-top: 1rem;
+}
+
+.contato-button{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  background-color: var(--cor-botao);
+  border-radius: 15px;
+  cursor: pointer;
+  color: var(--cor-secundaria);
+  height: 3rem;
+}
+
+.contato-input:focus::placeholder{
+  opacity: 0;
+}
+
+.contato-input:focus + .contato-label,
+.contato-input:not(:placeholder-shown).contato-input:not(:focus) + .contato-label{
+  opacity: 1;
+  top: -18px;
+}
+
+.contato-social{
+  display: grid;
+  row-gap: 1rem;
+  background-color: hsl(0, 0%, 10%);
+  padding-block: 1rem 2rem;
+  text-align: center;
+}
+
+.contato-social-data{
+  display: flex;
+  flex-direction: column;
+  row-gap: 1.5rem;
+}
