--- a/style.css
+++ b/style.css
@@ -522,3 +522,32 @@ transition: background-color 6000s color 6000s;
   flex-direction: column;
   row-gap: 1.5rem;
 }
+
+
+   /* RESPONSIVIDADE  */
+
+   @media (max-width: 460px) {
+    #header-container section {
+      width: 460px;
+      
+    }
+
+    .header-logo img {
+      height: 25px;
+      margin: auto 1rem auto -2rem ;
+    }
+
+    .header-links ul{
+      gap: 1rem;
+    }
+
+    .header-links a{
+      font-size: 15px;
+    }
+
+    .img-de-fundo img {
+      width: 100%;
+    }
+
+    
+  }
